--- a/columnas/sociedad.html
+++ b/columnas/sociedad.html
@@ -1,108 +1,134 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Sociedad y Poder</title>
-  <link rel="stylesheet" href="../css/style.css">
+
   <style>
-    body {
-      background: url("../img/fondo2.png") no-repeat center center fixed;
-      background-size: cover;
-      color: #f5e0b8;
-      margin: 0;
-      overflow-y: auto;
+    /* ===== Fondo (PC) ===== */
+    body{
+      margin:0;
+      padding:0;
+      background: url("../img/fondo2.png") center center / cover no-repeat fixed;
+      color:#f5e0b8;
       font-family: Arial, sans-serif;
+      min-height:100vh;
+      overflow-y:auto;
     }
 
-    .container {
-      max-width: 900px;
-      margin: 40px auto;
-      padding: 40px 20px;
-      background: rgba(0, 0, 0, 0.6);
-      border-radius: 12px;
-      box-sizing: border-box;
+    /* ===== Contenedor ===== */
+    .container{
+      max-width: 820px;        /* más estrecho */
+      margin: 32px auto;
+      padding: 28px 18px;
+      background: rgba(0,0,0,.55);
+      border-radius:12px;
+      box-sizing:border-box;
     }
 
-    h1 {
-      text-align: center;
-      margin-bottom: 30px;
-      font-size: 2rem;
+    h1{
+      text-align:center;
+      margin:0 0 22px;
+      font-size:1.9rem;
+      line-height:1.15;
     }
 
-    .columnas {
-      margin-bottom: 20px;
-      padding: 15px;
-      border: 1px solid #f5e0b8;
-      border-radius: 8px;
-      cursor: pointer;
-      transition: all 0.3s ease;
-      background: rgba(0,0,0,0.4);
+    .menu{ text-align:center; margin-bottom:18px; }
+    .menu a{
+      text-decoration:none;
+      color:#f5e0b8;
+      border:2px solid #f5e0b8;
+      padding:8px 18px;
+      border-radius:6px;
+      transition:.2s;
+    }
+    .menu a:hover{ background:#f5e0b8; color:#2c1a08; }
+
+    /* ===== Tarjetas ===== */
+    .card{
+      margin-bottom:16px;
+      padding:12px 14px;
+      border:1px solid #f5e0b8;
+      border-radius:10px;
+      background: rgba(0,0,0,.38);
+      cursor:pointer;
+      transition: background .25s ease, transform .15s ease;
+    }
+    .card:hover{ background: rgba(245,224,184,.16); }
+
+    .card h2{
+      font-size:1.05rem;
+      line-height:1.25;
+      margin:0 0 6px;
+    }
+    .card p{
+      font-size:.92rem;
+      margin:0;
+      color:#d8c6a5;
     }
 
-    .columnas:hover {
-      background: rgba(245,224,184,0.2);
+    /* ===== Iframe + herramientas ===== */
+    .iframe-container{ display:none; margin-top:14px; }
+    .tools{
+      display:flex;
+      gap:8px;
+      justify-content:flex-end;
+      margin:10px 0;
+    }
+    .btn{
+      padding:8px 16px;
+      border:2px solid #f5e0b8;
+      border-radius:6px;
+      color:#f5e0b8;
+      background:transparent;
+      font-size:.9rem;
+      text-decoration:none;
+      cursor:pointer;
+      transition:.2s;
+    }
+    .btn:hover{ background:#f5e0b8; color:#2c1a08; }
+
+    iframe{
+      width:100%;
+      height:800px;
+      border:none;
+      display:block;
+      background:transparent;   /* sin fondo gris */
     }
 
-    .columnas h2 {
-      font-size: 1.1rem;
-      margin-bottom: 5px;
+    footer{
+      text-align:center;
+      font-size:.8rem;
+      color:#d8c6a5;
+      margin:28px 0 18px;
+      opacity:.85;
     }
 
-    .columnas p {
-      font-size: 0.9rem;
-      color: #d8c6a5;
-    }
+    /* ===== Móvil ===== */
+    @media (max-width:600px){
+      /* fondo diferente en móvil */
+      body{
+        background-image: url("../img/fondocel2.png");
+        background-position: center top;
+        background-size: cover;
+        background-attachment: fixed;
+        background-color:#0b0a09;
+      }
+      .container{
+        max-width:90%;
+        padding:20px 14px;
+        margin:22px auto;
+        border-radius:10px;
+      }
+      h1{ font-size:1.6rem; margin-bottom:18px; }
+      .card{ padding:10px 12px; }
+      .card h2{ font-size:1rem; }
+      .card p{ font-size:.9rem; }
 
-    .iframe-container {
-      margin-top: 20px;
-      display: none;
-    }
-
-    .btn-close, .btn-open {
-      margin: 10px 5px 10px 0;
-      padding: 8px 16px;
-      background: transparent;
-      border: 2px solid #f5e0b8;
-      border-radius: 6px;
-      color: #f5e0b8;
-      font-size: 0.9rem;
-      cursor: pointer;
-      transition: all 0.3s ease;
-      float: right;
-      text-decoration: none;
-    }
-
-    .btn-close:hover, .btn-open:hover {
-      background: #f5e0b8;
-      color: #2c1a08;
-    }
-
-    .menu {
-      text-align: center;
-      margin-bottom: 20px;
-    }
-
-    .menu a {
-      text-decoration: none;
-      color: #f5e0b8;
-      border: 2px solid #f5e0b8;
-      padding: 8px 20px;
-      border-radius: 6px;
-      transition: 0.3s;
-    }
-
-    .menu a:hover {
-      background: #f5e0b8;
-      color: #2c1a08;
-    }
-
-    footer {
-      text-align: center;
-      font-size: 0.8rem;
-      color: #d8c6a5;
-      margin: 20px 0;
-      opacity: 0.8;
+      .tools{ gap:6px; }
+      .btn{ padding:7px 14px; font-size:.88rem; }
+      iframe{ height:70vh; }  /* más compacto en móvil */
     }
   </style>
 </head>
@@ -110,71 +136,73 @@
   <div class="container">
     <h1>SOCIEDAD Y PODER</h1>
 
-    <!-- Botón para volver al menú principal -->
     <div class="menu">
       <a href="../index.html">← Volver al menú principal</a>
     </div>
 
     <!-- Columna 1 (7 agosto) -->
-    <div class="columnas" onclick="mostrarIframe('iframe4')">
+    <div class="card" onclick="mostrarIframe('iframe4')">
       <h2>La lealtad que México olvidó : 7 de agosto de 2025</h2>
       <p>Cuando la palabra era el último refugio de la dignidad</p>
     </div>
     <div class="iframe-container" id="iframe4">
-      <a href="https://drive.google.com/file/d/1YKJ_Gz8tcljeG9YTWKdXDap2UyWHMfEO/view" target="_blank" class="btn-open">↗ Abrir</a>
-      <button class="btn-close" onclick="cerrarIframe('iframe4')">✖ Cerrar</button>
-      <iframe src="https://drive.google.com/file/d/1YKJ_Gz8tcljeG9YTWKdXDap2UyWHMfEO/preview" width="100%" height="800" style="border:none;"></iframe>
+      <div class="tools">
+        <a href="https://drive.google.com/file/d/1YKJ_Gz8tcljeG9YTWKdXDap2UyWHMfEO/view" target="_blank" rel="noopener" class="btn">↗ Abrir</a>
+        <button class="btn" onclick="cerrarIframe('iframe4')">✖ Cerrar</button>
+      </div>
+      <iframe src="https://drive.google.com/file/d/1YKJ_Gz8tcljeG9YTWKdXDap2UyWHMfEO/preview"></iframe>
     </div>
 
     <!-- Columna 2 (28 julio) -->
-    <div class="columnas" onclick="mostrarIframe('iframe3')">
+    <div class="card" onclick="mostrarIframe('iframe3')">
       <h2>La Indefensión Aprendida : 28 de julio de 2025</h2>
       <p>El Llamado Urgente del Sueldo Moral</p>
     </div>
     <div class="iframe-container" id="iframe3">
-      <a href="https://drive.google.com/file/d/1c7tei6sx7ZXA20BggkiDPmo5y8eus78a/view" target="_blank" class="btn-open">↗ Abrir</a>
-      <button class="btn-close" onclick="cerrarIframe('iframe3')">✖ Cerrar</button>
-      <iframe src="https://drive.google.com/file/d/1c7tei6sx7ZXA20BggkiDPmo5y8eus78a/preview" width="100%" height="800" style="border:none;"></iframe>
+      <div class="tools">
+        <a href="https://drive.google.com/file/d/1c7tei6sx7ZXA20BggkiDPmo5y8eus78a/view" target="_blank" rel="noopener" class="btn">↗ Abrir</a>
+        <button class="btn" onclick="cerrarIframe('iframe3')">✖ Cerrar</button>
+      </div>
+      <iframe src="https://drive.google.com/file/d/1c7tei6sx7ZXA20BggkiDPmo5y8eus78a/preview"></iframe>
     </div>
 
     <!-- Columna 3 (19 julio) -->
-    <div class="columnas" onclick="mostrarIframe('iframe2')">
+    <div class="card" onclick="mostrarIframe('iframe2')">
       <h2>Puño Arancelario Yankee : 19 de julio de 2025</h2>
       <p>México al límite del cerco comercial</p>
     </div>
     <div class="iframe-container" id="iframe2">
-      <a href="https://drive.google.com/file/d/1-IFAO6595i2W9cY9dHcg4xX2R1URqV9W/view" target="_blank" class="btn-open">↗ Abrir</a>
-      <button class="btn-close" onclick="cerrarIframe('iframe2')">✖ Cerrar</button>
-      <iframe src="https://drive.google.com/file/d/1-IFAO6595i2W9cY9dHcg4xX2R1URqV9W/preview" width="100%" height="800" style="border:none;"></iframe>
+      <div class="tools">
+        <a href="https://drive.google.com/file/d/1-IFAO6595i2W9cY9dHcg4xX2R1URqV9W/view" target="_blank" rel="noopener" class="btn">↗ Abrir</a>
+        <button class="btn" onclick="cerrarIframe('iframe2')">✖ Cerrar</button>
+      </div>
+      <iframe src="https://drive.google.com/file/d/1-IFAO6595i2W9cY9dHcg4xX2R1URqV9W/preview"></iframe>
     </div>
 
     <!-- Columna 4 (25 junio) -->
-    <div class="columnas" onclick="mostrarIframe('iframe1')">
+    <div class="card" onclick="mostrarIframe('iframe1')">
       <h2>La Cocaína del Mar : 25 de junio de 2025</h2>
       <p>¿Una Legalización Encubierta para el Cártel de Sinaloa?</p>
     </div>
     <div class="iframe-container" id="iframe1">
-      <a href="https://drive.google.com/file/d/1w9u8SI90C7V42Zb6d9LiO3xfCactJlAP/view" target="_blank" class="btn-open">↗ Abrir</a>
-      <button class="btn-close" onclick="cerrarIframe('iframe1')">✖ Cerrar</button>
-      <iframe src="https://drive.google.com/file/d/1w9u8SI90C7V42Zb6d9LiO3xfCactJlAP/preview" width="100%" height="800" style="border:none;"></iframe>
+      <div class="tools">
+        <a href="https://drive.google.com/file/d/1w9u8SI90C7V42Zb6d9LiO3xfCactJlAP/view" target="_blank" rel="noopener" class="btn">↗ Abrir</a>
+        <button class="btn" onclick="cerrarIframe('iframe1')">✖ Cerrar</button>
+      </div>
+      <iframe src="https://drive.google.com/file/d/1w9u8SI90C7V42Zb6d9LiO3xfCactJlAP/preview"></iframe>
     </div>
   </div>
 
-  <footer>
-    © Guillermo Garcia Muela. Todos los derechos reservados.
-  </footer>
+  <footer>© Guillermo Garcia Muela. Todos los derechos reservados.</footer>
 
   <script>
-    function mostrarIframe(id) {
-      document.querySelectorAll('.iframe-container').forEach(div => {
-        div.style.display = "none";
-      });
-      document.getElementById(id).style.display = "block";
+    function mostrarIframe(id){
+      document.querySelectorAll('.iframe-container').forEach(div => div.style.display='none');
+      document.getElementById(id).style.display='block';
       window.scrollTo({ top: 0, behavior: 'smooth' });
     }
-
-    function cerrarIframe(id) {
-      document.getElementById(id).style.display = "none";
+    function cerrarIframe(id){
+      document.getElementById(id).style.display='none';
     }
   </script>
 </body>
